# qtif-test

./: .gitignore  CMakeLists.txt
include/: component_a.h
src/: component_a.cpp  main.cpp
